fix statements alignment

--- a/app/assets/stylesheets/statements.css.scss
+++ b/app/assets/stylesheets/statements.css.scss
@@ -6,3 +6,6 @@
   clear: both;
 }
 
+.add_me {
+  margin-bottom: 20px;
+}
